# redox-sysmon

./: Cargo.toml  README.md  app.js  index.html  package-lock.json  package.json  style.css
modules/: cli-core.js  fs-utils.js  ion-core.js  telemetry.js  term-core.js  tty-pty.js
src/: advanced_modules.rs  main.rs  modules.rs  system.rs  ui.rs
