[package]
name = "redox-console"
version = "1.0.0"
edition = "2021"
description = "Advanced Redox OS Subsystem Console Monitor"
authors = ["Redox Team"]

[dependencies]
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
tui = "0.19"
unicode-width = "0.1"